--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Fidel</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script type="text/javascript" src="js/tree.min.js"></script>
+  <script src="js/OBJLoader.js"></script>
   <script type="text/javascript" src="js/game.js"/></script>
 </head>
 <body>
